	- ADDED: Compute shader management and Buffer management.
	- ADDED: More RLGL Initialization functions.
	- ADDED: GlyphInfo type.
	- ADDED: DrawTextEx.
	- CHANGED: DrawText is now DrawTextEx like in Raylib.
	- ADDED: Global variable descriptions for API.
	- CHANGED: Organized functions by putting them in the same order as in Raylib.
	- ADDED: Matrix library.

DETAILED CHANGES:
	- CHANGED: GenImageColor now takes Vector2 as size.
	- REMOVED: GetTextureType and texture type enums.
	- ADDED: GetRenderTextureTexture and GetRenderTextureDepthTexture.
	- REMOVED: UnloadCamera2D and UnloadCamera3D.
	- ADDED: LoadFontEx takes also fontChars.
	- ADDED: LoadTextureFromData.
	- ADDED: LoadRenderTextureFromData.
	- ADDED: IsRenderTextureReady, IsMaterialReady, IsFontReady, IsModelReady, IsShaderReady,
	IsImageReady, IsWaveReady, IsSoundReady and IsMusicReady.
	- ADDED: UnloadBuffer.
	- ADDED: GetMaterialDefault returns lightuserdata reference to default material.
	- REMOVED: Some examples.
	- ADDED: DrawTextCodepoint and DrawTextCodepoints.
	- ADDED: GetGlyphIndex, GetGlyphInfo and GetGlyphAtlasRec.
	- ADDED: SetWindowIcons, SetWindowOpacity and GetWindowHandle.
	- CHANGED: Merged uluaGet*Index functions to uluaGet* functions.
	- FIXED: LoadFontEx.
	- ADDED: DrawTextBoxed and DrawTextBoxedSelectable From raylib [text] example - Rectangle bounds.
	- ADDED: CompressData, DecompressData, EncodeDataBase64 and DecodeDataBase64.
	- ADDED: GetBufferType and GetBufferSize.
	- ADDED: Compress data example.
	- ADDED: ExportBuffer and LoadBufferFromFile.
	- REMOVED: DrawTextBoxedSelectable.
	- ADDED: DrawTextBoxedTinted.
	- ADDED: GenMeshCubicmap.
	- CHANGED: Organized model functions.
	- ADDED: GetModelBoundingBox.
	- ADDED: DrawModelWires and DrawModelWiresEx.
	- ADDED: LoadMaterials.
	- CHANGED: Organized core functions.
	- CHANGED: Organized shapes, textures, audio, text, lights and gui functions.
	- ADDED: More color and rectangle lib functionality.
